fix tableros urls

--- a/profesionales/templates/base_tableros.html
+++ b/profesionales/templates/base_tableros.html
@@ -37,7 +37,7 @@
                             <a href="{% url 'profesionales.tablero.por_profesion' %}">Por profesion</a>
                         </li>
                         <li>
-                            <a href="#">Por centro de salud</a>
+                            <a href="{% url 'profesionales.tablero.por_departamento' %}">Por departamento</a>
                         </li>
                     </ul>
                 </li>
