--- a/profesionales/templates/base_tableros.html
+++ b/profesionales/templates/base_tableros.html
@@ -48,7 +48,7 @@
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Obras sociales</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <li>
-                            <a href="{% url 'obras-sociales.tablero.por_provincia' %}">Por provincia</a>
+                            <a href="#">Por provincia</a>
                         </li>
                         <li>
                             <a href="#">Por especialidad</a>
