--- a/profesionales/templates/base_tableros.html
+++ b/profesionales/templates/base_tableros.html
@@ -1,160 +1,176 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>{% block title %}Tableros de control{% endblock %}</title>
+  <title>{% block title %}Tableros de control{% endblock %}</title>
 
-    <!-- Bootstrap CSS CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/tableros.css' %}">
+  <!-- Bootstrap CSS CDN -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <!-- Our Custom CSS -->
+  <link rel="stylesheet" href="{% static 'css/tableros.css' %}">
 
-    <!-- Font Awesome JS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+  <!-- Font Awesome JS -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
+    integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
+    crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
+    integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
+    crossorigin="anonymous"></script>
 
-    {% block extra_head %}{% endblock %}
+  {% block extra_head %}{% endblock %}
 </head>
 
 <body>
 
-    <div class="wrapper">
-        <!-- Sidebar Holder -->
-        <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3>Tableros</h3>
-            </div>
+  <div class="wrapper">
+    <!-- Sidebar Holder -->
+    <nav id="sidebar">
+      <div class="sidebar-header">
+        <h3>Tableros</h3>
+      </div>
 
-            <ul class="list-unstyled components">
-                <!--titulo agrupador sin link <p>Profesionales</p>-->
-                <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Profesionales</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li>
-                            <a href="{% url 'profesionales.tablero.por_profesion' %}">Por profesion</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'profesionales.tablero.por_departamento' %}">Por departamento</a>
-                        </li>
-                    </ul>
-                </li>
-                
-                <!--titulo agrupador sin link <p>Atenciones</p> -->
-                <li>
-                    <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Obras sociales</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Por provincia</a>
-                        </li>
-                        <li>
-                            <a href="#">Por especialidad</a>
-                        </li>
-                        
-                    </ul>
-                </li>
+      <ul class="list-unstyled components">
+        <!--titulo agrupador sin link <p>Profesionales</p>-->
+        <li class="active">
+          <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Profesionales</a>
+          <ul class="collapse list-unstyled" id="homeSubmenu">
+            <li>
+              <a href="{% url 'profesionales.tablero.por_profesion' %}">Por profesion</a>
+            </li>
+            <li>
+              <a href="{% url 'profesionales.tablero.por_departamento' %}">Por departamento</a>
+            </li>
+          </ul>
+        </li>
 
-                <!--titulo agrupador sin link <p>Atenciones</p> -->
-                <li>
-                    <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Centros de salud</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Por area programática</a>
-                        </li>
-                        <li>
-                            <a href="#">Por especialidad</a>
-                        </li>
-                        
-                    </ul>
-                </li>
+        <!--titulo agrupador sin link <p>Atenciones</p> -->
+        <li>
+          <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
+          <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Obras sociales</a>
+          <ul class="collapse list-unstyled" id="pageSubmenu">
+            <li>
+              <a href="#">Por provincia</a>
+            </li>
+            <li>
+              <a href="#">Por especialidad</a>
+            </li>
 
-                <!--titulo agrupador sin link <p>Atenciones</p> -->
-                <li>
-                    <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Turnos</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Por centro de salud</a>
-                        </li>
-                        <li>
-                            <a href="#">Por especialidad</a>
-                        </li>
-                        
-                    </ul>
-                </li>
+          </ul>
+        </li>
+
+        <!--titulo agrupador sin link <p>Atenciones</p> -->
+        <li>
+          <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
+          <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Centros de
+            salud</a>
+          <ul class="collapse list-unstyled" id="pageSubmenu">
+            <li>
+              <a href="#">Por area programática</a>
+            </li>
+            <li>
+              <a href="#">Por especialidad</a>
+            </li>
+
+          </ul>
+        </li>
+
+        <!--titulo agrupador sin link <p>Atenciones</p> -->
+        <li>
+          <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
+          <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Turnos</a>
+          <ul class="collapse list-unstyled" id="pageSubmenu">
+            <li>
+              <a href="#">Por centro de salud</a>
+            </li>
+            <li>
+              <a href="#">Por especialidad</a>
+            </li>
+
+          </ul>
+        </li>
+      </ul>
+
+      <ul class="list-unstyled CTAs">
+        <li><a href="#" class="download">+ info</a></li>
+        <li><a href="#" class="download">OPS</a></li>
+        <li><a href="#" class="download">Municipalidad de Córdoba</a></li>
+        <!--<li><a href="#" class="article">Menu lindo 2</a></li>-->
+      </ul>
+    </nav>
+
+    <!-- Page Content Holder -->
+    <div id="content">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+
+          <button type="button" id="sidebarCollapse" class="navbar-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fas fa-align-justify"></i>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="nav navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Profesionales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Atenciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Centros de salud</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Historia clínica</a>
+              </li>
             </ul>
-
-            <ul class="list-unstyled CTAs">
-                <li><a href="#" class="download">+ info</a></li>
-                <li><a href="#" class="download">OPS</a></li>
-                <li><a href="#" class="download">Municipalidad de Córdoba</a></li>
-                <!--<li><a href="#" class="article">Menu lindo 2</a></li>-->
-            </ul>
-        </nav>
-
-        <!-- Page Content Holder -->
-        <div id="content">
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-
-                    <button type="button" id="sidebarCollapse" class="navbar-btn">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </button>
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Profesionales</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Atenciones</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Centros de salud</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Historia clínica</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            
-            {% block content %}{% endblock %}
-            
+          </div>
         </div>
-    </div>
+      </nav>
 
-    {% block js_footer %}
-        
-    
+      {% block content %}{% endblock %}
+
+    </div>
+  </div>
+
+  {% block unwrapped_content %}{% endblock %}
+
+  {% block js_footer %}
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
     <!-- Popper.JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+      crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+      integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+      crossorigin="anonymous"></script>
 
 
     <script type="text/javascript">
-        $(document).ready(function () {
-            $('#sidebarCollapse').on('click', function () {
-                $('#sidebar').toggleClass('active');
-                $(this).toggleClass('active');
-            });
+      $(document).ready(function () {
+        $('#sidebarCollapse').on('click', function () {
+          $('#sidebar').toggleClass('active');
+          $(this).toggleClass('active');
         });
+      });
     </script>
-    {% endblock js_footer %}
+  {% endblock js_footer %}
 </body>
 
 </html>
