--- a/calendario/templates/base_modal.html
+++ b/calendario/templates/base_modal.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="modalForm">
-  <div class="modal-dialog">
+  <div class="modal-dialog {{ modal_size }}">
     <div class="modal-content">
 
       <div class="modal-header">
