--- a/profesionales/templates/base_consultas.html
+++ b/profesionales/templates/base_consultas.html
@@ -8,7 +8,8 @@
     <title>{% block title %}Historia Clínica{% endblock %}</title>
 
     <!-- Bootstrap CSS CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/tableros.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
@@ -28,6 +29,15 @@
             <div class="sidebar-header">
                 <h3>Consultas</h3>
             </div>
+
+            <ul class="list-unstyled components">
+    <!--titulo agrupador sin link <p>Profesionales</p>-->
+                <li class="active">
+                    <a href="{% url 'profesionales.crear.consulta' %}" aria-expanded="false" class="dropdown-toggle">Nueva Consulta</a>
+                </li>
+
+            </ul>
+
 
             {% block sidebar %}{% endblock %}
 
