--- a/profesionales/templates/profesionales/consulta_createview.html
+++ b/profesionales/templates/profesionales/consulta_createview.html
@@ -1,14 +1,21 @@
 {% extends "base_consultas.html" %}
+{% load crispy_forms_tags %}
+{% load static %}
 
 {% block extra_head %}
 {% endblock %}
 
 {% block content %}
     <h2>Nueva Consulta</h2>
-    <form method="post">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
+    <form method="post" novalidate>
+    {% csrf_token %}
+        {{ form|crispy}}
+        <button type="submit" class="btn btn-success">Guardar Consulta</button>
     </form>
     <div class="line"></div>
-    <a class="btn btn-primary" href="{% url 'profesionales.consulta.lista' dni=object.paciente.numero_documento %}" role="button">LISTADO</a>
+
 {% endblock %}
+{% block js_footer %}
+    <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+    {{ form.media }}
+{% endblock js_footer %}
