Add previous week appointment's copy button to calendar.

--- a/calendario/static/css/modal_extra.css
+++ b/calendario/static/css/modal_extra.css
@@ -1,3 +1,16 @@
 .modal-open-btn {
     margin-left: 20px;
 }
+
+.modal p {
+    margin-bottom: 0px;
+    margin-top: 5px;
+}
+
+#modalForm .modal-footer, .action-buttons-container {
+    justify-content: space-between;
+}
+
+.action-buttons-container {
+    padding: 10px 15px;
+}
