--- a/calendario/templates/base_modal.html
+++ b/calendario/templates/base_modal.html
@@ -15,6 +15,7 @@
       </div>
 
       <div class="modal-footer">
+        {{ modal_buttons|safe }}
         <button type="button" class="btn btn-danger" data-dismiss="modal">
           {{ modal_close }}
         </button>
