--- a/profesionales/static/css/index.css
+++ b/profesionales/static/css/index.css
@@ -1,5 +1,3 @@
-
-
 .demo, .demo-2 {
     position:relative;
     height:100px;
@@ -52,5 +50,10 @@
 }
 .demo-2 .form-search button.btn {
   padding:15px 12px;
+}
+
+/* Se sobreescribe estilo heredado para el placeholder */
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 11px !important;
 }
 
