Add appointment edit form when clicking on the event on the calendar

--- a/calendario/templates/base_modal.html
+++ b/calendario/templates/base_modal.html
@@ -16,7 +16,10 @@
 
       <div class="modal-footer">
         {{ modal_buttons|safe }}
-        <button type="button" class="btn btn-danger" data-dismiss="modal">
+        <button
+          type="button" class="btn btn-danger" data-dismiss="modal"
+          id="closeModalButton"
+        >
           {{ modal_close }}
         </button>
       </div>
