--- a/calendario/templates/calendario/add_appointment_form.html
+++ b/calendario/templates/calendario/add_appointment_form.html
@@ -35,5 +35,7 @@
       <p>{{ form.fields.paciente.label }}</p>
       {{ form.paciente }}
     </div>
+    <input type="hidden" name="id" value="" id="appointmentId">
+    <input type="hidden" name="delete" value="" id="deleteAppointment">
   </div>
 </form>
