Fixes mentioned in pull request

--- a/calendario/static/css/modal_extra.css
+++ b/calendario/static/css/modal_extra.css
@@ -14,3 +14,8 @@
 .action-buttons-container {
     padding: 10px 15px;
 }
+
+.select2-selection.select2-selection--single.form-control {
+    height: auto;
+    min-height: 35px;
+}
